# temporal-xray

./: .gitignore  .mcp.json  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  marketplace.json  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: temporal-investigator.md
skills/inspect/: SKILL.md
skills/setup/: SKILL.md
skills/temporal-debugging/: SKILL.md
src/: index.ts  temporal-client.ts  types.ts
src/temporal_xray/: client.py  server.py  temporal_client.py  transformers.py  types.py
src/temporal_xray/tools/: compare_executions.py  describe_task_queue.py  get_workflow_history.py  get_workflow_stack_trace.py  list_workflows.py  search_workflow_data.py  shared.py  temporal_connection.py
src/temporal_xray/transformers/: diff_engine.py  event_filter.py  history_summarizer.py
src/tools/: compare-executions.ts  describe-task-queue.ts  get-workflow-history.ts  get-workflow-stack-trace.ts  list-workflows.ts  search-workflow-data.ts  shared.ts  temporal-connection.ts
src/transformers/: diff-engine.ts  event-filter.ts  history-summarizer.ts
tests/: conftest.py  test_client.py  test_server.py  test_transformers.py
