[project]
name = "temporal-xray"
version = "1.1.0"
description = "Debug Temporal workflows directly from Claude Code. Provides seven read-only MCP tools to inspect executions, trace data flow, compare runs, check worker health, manage connections, and detect patterns across thousands of executions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["temporal", "workflow", "debugging", "mcp", "claude-code"]
authors = [{ name = "Neil Celik", email = "neil@evermindlabs.com" }]

dependencies = [
    "mcp>=1.0.0",
    "temporalio>=1.7.0",
]

[project.scripts]
temporal-xray = "temporal_xray.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_xray"]
